Unify source tracking with SourceHandlingContext (#11632)
- Replace boolean flags (hasMain, hasTest, etc.) with flexible set-based tracking for all language/scope combinations.
- Rename ResourceHandlingContext to SourceHandlingContext
- Add duplicate detection with WARNING for enabled sources
- Add hasSources() method for checking language/scope combinations
- Rename 'src' variable to 'sourceRoot' for clarity
- Replace Collectors.toList() with .toList() in DefaultProjectBuilder
- Use Java 17+ Stream.toList() instead of Collectors.toList().
- Fix Windows path separator issue in ProjectBuilderTest
- Implement validation rules for modular source handling (#11612):
- AC6: ERROR when mixing modular (with module) and classic (without module) sources within <sources>
- AC7: WARNING when legacy <sourceDirectory>/<testSourceDirectory> are used in modular projects (both explicit config and filesystem existence)
- Add validateNoMixedModularAndClassicSources() to SourceHandlingContext
- Add warnIfExplicitLegacyDirectory() to DefaultProjectBuilder
- Update tests to verify AC6 and AC7 behavior
- Update test project comments to reflect correct behavior

Co-authored-by: Claude Opus 4.5 <noreply@anthropic.com>